# AI-Powered-ASP_ROOM-RENTAL-SYSTEM

./: .gitignore  CV_CONTENT.md  FIXES.md  PROJECT_SYNOPSIS.md  RAZORPAY_SETUP.md  logfile  manage.py  pyproject.toml  render.yaml  replit.md  requirements.txt  start_postgres.bat  start_postgres.ps1  test_chatbot.py
roombook/: asgi.py  settings.py  urls.py  wsgi.py
rooms/: admin.py  ai_negotiation.py  genai_chatbot.py  ml_models.py  models.py  serializers.py  urls.py  views.py
rooms/management/commands/: add_sample_data.py  fix_room_images.py  make_superuser.py  seed_data.py  update_room_owner.py
rooms/migrations/: 0001_initial.py  0002_userprofile_notification.py  0003_userprofile_otp_roles.py  0004_alter_booking_status.py  0005_invoice.py  0006_payment.py  0007_userprofile_google_id.py  0008_alter_payment_payment_method.py
static/: css_background_test.html  debug.html  simple_test.html  test.html  test_access.html
templates/: base.html  home.html  notifications.html  profile.html
templates/about/: about.html
templates/admin/: users.html
templates/auth/: login.html  register.html  verify_otp.html
templates/bookings/: my_bookings.html  owner_bookings.html
templates/chatbot/: chatbot.html
templates/contact/: contact.html
templates/legal/: agreement_generator.html  privacy.html  terms.html
templates/ml/: recommendations.html
templates/negotiation/: negotiation_assistant.html  negotiation_assistant_backup.html
templates/rooms/: owner_rooms.html  room_detail.html  room_form.html  room_list.html
templates/services/: services.html
